k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dheli-app
  namespace: dheli
  labels:
    app: dheli-app
spec:
  type: ClusterIP
  selector:
    app: dheli-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
